# gstgzdec

./: COPYING  README  configure.ac
src/: Makefile.am  gstgstgzdec.c  gstgstgzdec.h  gstgzdec.c  gstgzdec.h  test-plugin.sh  test-wrapper.sh  zip-dec-wrapper.c  zip-dec-wrapper.h
